Add slides transition using mouse click

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@ deportivas</i></small></h3>
       </section>
 
       <section>
-        <h3><em>AGPL</em></h3>
+        <h3>AGPL</h3>
         <h3 class="fragment">GNU Free Documentation License</h3>
-        <h3 class="fragment">Creative Commons <em>Reconocimiento - Compartir igual</em></h3>
-        <h3 class="fragment">Fotografías de stock</h3>
+        <h3 class="fragment">Creative Commons Reconocimiento - Compartir igual</h3>
+        <h3 class="fragment"><em>Fotografías de stock</em></h3>
       </section>
 
       <section>
@@ -428,14 +428,14 @@ getService (type) {
 
    </script>
 <script>
-/*window.addEventListener("mousedown", handleClick, false);
+window.addEventListener("mousedown", handleClick, false);
 window.addEventListener("contextmenu", function(e) { e.preventDefault(); }, false);
 
 function handleClick(e) {
    e.preventDefault();
    if(e.button === 0) Reveal.next();
    if(e.button === 2) Reveal.prev();
-}*/
+}
 </script>
 
 </body>
