Modify slides for an informal talk

--- a/index.html
+++ b/index.html
@@ -37,15 +37,8 @@
    <div class="reveal">
       <div class="slides">
 
-      <section id="portada" data-background="img/fondos/futsal_night.jpg" class="top-portada-position">
-        <p><img src="img/logo_vacmatch_mobile.png" width="70%"/></p>
-        <h3><small><i>Aplicación web y móvil para la<br/> gestión electrónica de actas
-deportivas</i></small></h3>
-        <div class="pull-right directors">
-        <p><small><b>Pablo Castro Valiño</b></small></p>
-        <p><small>Director: <b>Santiago Saavedra López</b></small></p>
-        <p><small>Tutor: <b>Fernando Bellas Permuy</b></small></p>
-        </div>
+      <section id="portada" data-background="img/fondos/futsal_night.jpg">
+        <p><img src="img/logo_vacmatch_mobile.png" width="80%"/></p>
       </section>
 
       <section>
@@ -55,12 +48,24 @@ deportivas</i></small></h3>
         <h3 class="fragment"><em>Fotografías de stock</em></h3>
       </section>
 
-      <section>
-         <h2>Índice</h2>
-         <h3>1.Introducción <em>2.Demo</em></h3>
-         <h3><em>3.Metodología</em> 4.Planificación</h3>
-         <h3>5.Desarrollo<em> 6.Tecnologías</em></h3>
-         <h3><em>7.Conclusiones y trabajo futuro</em></h3>
+      <section data-background="white">
+         <img src="img/logos/gpul.svg" width="30%" height="30%">
+      </section>
+
+      <section data-background="img/fondos/arduino.jpg" data-background-size="100%">
+      </section>
+
+      <section data-background="img/fondos/akademy2015.jpg" data-background-size="100%">
+      </section>
+
+      <section data-background="white">
+         <div>
+           <img src="img/logos/labs-logo.svg" width="10%">
+           <img src="img/logos/akademy.png" width="25%">
+           <img src="img/logos/librecon.png" width="40%">
+         </div>
+         <br/>
+         <img src="img/logos/fosdem.jpg" width="10%">
       </section>
 
       <section data-background-size="100%">
@@ -148,16 +153,6 @@ deportivas</i></small></h3>
 
 <!-- - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - -->
 
-      <section>
-        <h3>2.Demo</h3>
-      </section>
-
-<!-- - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - -->
-
-      <section>
-        <h3>3.Metodología</h3>
-      </section>
-
       <section data-background="img/fondos/emprendedores.jpg" >
         <h2><em>Lean Startup</em></h2>
         <h2 class="fragment">Scrum <br/>+<br/> eXtremeProgramming</h2>
@@ -172,50 +167,11 @@ deportivas</i></small></h3>
 
 <!-- - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - -->
 
-      <section>
-        <h3>4.Planificación</h3>
-      </section>
-
-      <section>
-        <div>
-          <h4><em>Julio - Noviembre 2015</em> <small>155 horas</small></h4>
-          <h4>Validación de negocio <em>2 sprints</em></h4>
-        </div>
-        <div class="fragment">
-          <hr/>
-          <h4><em>Noviembre 2015 - Enero 2016</em> <small>208 horas</small><h4/>
-          <h4>Desarrollo de producto <em>5 sprints</em></h4>
-        </div>
-        <div class="fragment">
-          <hr/>
-          <h4><em>Enero - Mayo 2016</em> <small>189 horas</small><h4/>
-          <h4>De empresa a comunidad <em>8 sprints</em></h4>
-        </div>
-        <aside class="notes">
-          <ul>
-            <li>
-              Prototipo visual + funcional. Federaciones
-              155 horas
-            </li>
-            <li>
-              Torneo + Lonja
-              208
-            </li>
-            <li>
-              Abandonamos empresa
-              189 horas  -> 552 horas total
-            </li>
-          </ul>
-        </aside>
-      </section>
-
       <section data-background="img/fondos/valla.jpg" data-background-size="100%">
       </section>
 
-<!-- - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - -->
-
       <section>
-        <h3>5.Tecnologías libres</h3>
+        <h3>Free Software</h3>
       </section>
 
       <section data-background="white">
@@ -253,64 +209,6 @@ deportivas</i></small></h3>
 <!-- - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - -->
 
       <section>
-        <h2>6.Desarrollo</h2>
-      </section>
-
-      <section>
-        <h3>Multideporte</h3>
-      </section>
-
-      <section data-background="white" data-background-size="100%">
-        <img class="" src="img/diagramas/sport_diagram.png" width="150%"/>
-      </section>
-
-      <section data-background="white" data-background-size="100%">
-        <h3><em>Capa servicios</em></h3>
-        <img class="diagram" src="img/diagramas/events_diagram.png" width="150%"/>
-      </section>
-
-      <section data-background="white" data-background-size="100%">
-        <h3><em>Capa vista</em></h3>
-        <img src="img/diagramas/events_view_diagram.png" width="100%"/>
-      </section>
-
-      <section>
-        <h3>Factoría de servicios</h3>
-      </section>
-
-      <section>
-        <pre style="margin-top: -100px; margin-left: -100px; width: 1000px;" >
-          <code style="max-height: 1300px;" data-trim>
-constructor () {
-      this._personService = new PersonService()
-      this._reportService = new ReportService()
-      this._refereeService = new RefereeService()
-      // Inject dependencies
-      this._eventService.ReportService = this._reportService
-      this._eventService.PersonService = this._personService
-      this._eventService.TeamService = this._teamService
-    ...
-      // Add services to the exposed list
-      this._servicesList.set(’ReportService’, this._reportService)
-      this._servicesList.set(’PersonService’, this._personService)
-      this._servicesList.set(’TeamService’, this._teamService)
-      this.isInitialized = true
-},
-
-getService (type) {
-      if (!this.isInitialized) {
-        this.constructor()
-      }
-      let service = this._servicesList.get(type)
-      if (!service) {
-        console.log(’Error getting ’, type, ’ service’)
-      }
-      return service
-}
-        </code></pre>
-      </section>
-
-      <section>
         <h3>Git flow</h3>
         <hr/>
         <h4>Feature -> <em>Development</em></h4>
@@ -342,7 +240,7 @@ getService (type) {
       </section>
 
       <section data-background="img/fondos/team1.jpg" data-background-size="100%">
-        <h3>7.Futuro</h3>
+        <h3>Futuro</h3>
       </section>
 
       <section>
@@ -354,7 +252,7 @@ getService (type) {
 <!-- - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - ✂ - -->
 
       <section data-background="img/fondos/lego_indiana.jpg" data-background-size="100%">
-         <div class="fragment fade-in">
+         <div class="fade-in">
           <h2>Gracias!</h2>
           <br/>
           <div class="fragment">
